--- a/backend/Stross.Downloader.YT/appsettings.json
+++ b/backend/Stross.Downloader.YT/appsettings.json
@@ -10,6 +10,11 @@
       "EndpointDefaults": {
         "Protocols": "Http2"
       }
+    },
+    "DownloaderConfig": {
+      "YtDlpPath": "/usr/local/bin/yt-dlp",
+      "OutputPath": "/app/downloads",
+      "AudioFormat": "mp3"
     }
   }
   
